Mon Sep 20 11:15:13 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:

          Added documentation about excluding directories and mpc files
          within workspaces.

        * templates/nmake.mpd:

          Added support to the template for generation of nmakefiles that
          contain both Win32 and Win64 targets.  Previously, only one or the
          other could be generated.

Thu Sep 16 09:32:09 2004  Chad Elliott  <elliott_c@ociweb.com>

        * README:
        * modules/ProjectCreator.pm:

          If an asterisk is used in the exename, sharedname or staticname
          setting, then it (the asterisk) will be replaced with the project
          name.  Thanks to Martin Corino <mcorino@remedy.nl> for suggesting
          this.

Thu Sep 16 07:45:11 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/BMakeWorkspaceCreator.pm:
        * modules/MakeWorkspaceCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:

          Added a CUSTOM_TARGETS macro that will allow users to access
          custom targets that can be generated with the use of the
          'verbatim' clause in mpc files.

        * templates/nmake.mpd:

          Added markers to allow for the use of 'verbatim' with nmake.

Wed Sep 15 11:32:57 2004  Chad Elliott  <elliott_c@ociweb.com>

        * templates/bmake.mpd:
        * templates/nmake.mpd:

          Modified these templates to work correctly if no exe name, shared
          or static name is specified by the mpc file.

Mon Sep 13 12:52:22 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where if a custom file is in a directory other than
          '.' and the 'gendir' setting is used to specify that the generated
          output will be in a particular directory, it would be ignored when
          determining if generated files were listed.

        * modules/Creator.pm:
        * modules/WorkspaceCreator.pm:
